// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchSources should action list match snapshot 1`] = `
Array [
  Object {
    "meta": Object {
      "arg": "All",
      "requestId": "fake-request-id",
      "requestStatus": "pending",
    },
    "payload": undefined,
    "type": "source/fetchSources/pending",
  },
  Object {
    "meta": Object {
      "arg": "All",
      "requestId": "fake-request-id",
      "requestStatus": "fulfilled",
    },
    "payload": Array [
      Object {
        "count": 2,
        "id": 1,
        "link": "link-1",
        "name": "data-1",
      },
      Object {
        "count": 10,
        "icon": "test-icon",
        "id": 2,
        "link": "link-2",
        "name": "data-2",
      },
    ],
    "type": "source/fetchSources/fulfilled",
  },
]
`;

exports[`fetchSources should handle fetchSources.fulfilled 1`] = `
Object {
  "fetchListStatus": 2,
  "list": Array [
    Object {
      "name": "fake-data",
    },
  ],
}
`;

exports[`fetchSources should handle fetchSources.pending 1`] = `
Object {
  "fetchListStatus": 1,
}
`;

exports[`fetchSources should handle fetchSources.rejected 1`] = `
Object {
  "fetchListStatus": 3,
}
`;

exports[`searchUrlForSource should action list match snapshot 1`] = `
Array [
  Object {
    "meta": Object {
      "arg": "fake-link",
      "requestId": "fake-request-id",
      "requestStatus": "pending",
    },
    "payload": undefined,
    "type": "source/searchUrlForSource/pending",
  },
  Object {
    "error": Object {
      "message": "ParseRSSFailed",
      "name": "Error",
      "stack": "fake-stack",
    },
    "meta": Object {
      "aborted": false,
      "arg": "fake-link",
      "condition": false,
      "rejectedWithValue": false,
      "requestId": "fake-request-id",
      "requestStatus": "rejected",
    },
    "payload": undefined,
    "type": "source/searchUrlForSource/rejected",
  },
]
`;

exports[`searchUrlForSource should handle searchUrlForSource.fulfilled 1`] = `
Object {
  "subscribeName": "fake-name",
  "subscribeStatus": 0,
  "subscribeStep": 1,
}
`;

exports[`searchUrlForSource should handle searchUrlForSource.pending 1`] = `
Object {
  "subscribeLink": "fake-link",
  "subscribeStatus": 1,
}
`;

exports[`searchUrlForSource should handle searchUrlForSource.rejected 1`] = `
Object {
  "subscribeError": "fake-error",
  "subscribeStatus": 3,
}
`;

exports[`searchUrlForSource should handle searchUrlForSource.rejected even when no message 1`] = `
Object {
  "subscribeError": "Unknown Error",
  "subscribeStatus": 3,
}
`;

exports[`searchUrlForSource should rejected action list match snapshot 1`] = `
Array [
  Object {
    "meta": Object {
      "arg": "fake-link",
      "requestId": "fake-request-id",
      "requestStatus": "pending",
    },
    "payload": undefined,
    "type": "source/searchUrlForSource/pending",
  },
  Object {
    "error": Object {
      "message": "ParseRSSFailed",
      "name": "Error",
      "stack": "fake-stack",
    },
    "meta": Object {
      "aborted": false,
      "arg": "fake-link",
      "condition": false,
      "rejectedWithValue": false,
      "requestId": "fake-request-id",
      "requestStatus": "rejected",
    },
    "payload": undefined,
    "type": "source/searchUrlForSource/rejected",
  },
]
`;

exports[`searchUrlForSource should success action list match snapshot 1`] = `
Array [
  Object {
    "meta": Object {
      "arg": "fake-link",
      "requestId": "fake-request-id",
      "requestStatus": "pending",
    },
    "payload": undefined,
    "type": "source/searchUrlForSource/pending",
  },
  Object {
    "meta": Object {
      "arg": "fake-link",
      "requestId": "fake-request-id",
      "requestStatus": "fulfilled",
    },
    "payload": "fake-result",
    "type": "source/searchUrlForSource/fulfilled",
  },
]
`;

exports[`should handle clearCountById 1`] = `
Object {
  "list": Array [
    Object {
      "count": 10,
      "id": 0,
    },
    Object {
      "count": 0,
      "id": 1,
    },
  ],
}
`;

exports[`should handle decCountById 1`] = `
Object {
  "list": Array [
    Object {
      "count": 9,
      "id": 0,
    },
    Object {
      "count": 20,
      "id": 1,
    },
  ],
}
`;

exports[`should handle incCountById 1`] = `
Object {
  "list": Array [
    Object {
      "count": 10,
      "id": 0,
    },
    Object {
      "count": 21,
      "id": 1,
    },
  ],
}
`;

exports[`should handle initial state 1`] = `
Object {
  "activeId": undefined,
  "fetchListStatus": 0,
  "list": Array [],
  "subscribeError": undefined,
  "subscribeLink": "",
  "subscribeName": "",
  "subscribeStatus": 0,
  "subscribeStep": undefined,
  "syncListStatus": 0,
}
`;

exports[`should handle resetSubscribeError 1`] = `
Object {
  "subscribeError": undefined,
}
`;

exports[`should handle resetSubscribeState 1`] = `
Object {
  "subscribeError": undefined,
  "subscribeLink": "",
  "subscribeName": "",
  "subscribeStatus": 0,
  "subscribeStep": undefined,
}
`;

exports[`should handle setCurrentSource 1`] = `
Object {
  "activeId": 1,
}
`;

exports[`should handle showSubscribeBar 1`] = `
Object {
  "activeId": undefined,
  "subscribeStatus": 0,
  "subscribeStep": 0,
}
`;

exports[`should handle unknown action type 1`] = `
Object {
  "subscribeStep": undefined,
}
`;

exports[`subscribeToSource should action list match snapshot 1`] = `
Array [
  Object {
    "meta": Object {
      "arg": Object {
        "mode": "All",
        "name": "fake-name",
      },
      "requestId": "fake-request-id",
      "requestStatus": "pending",
    },
    "payload": undefined,
    "type": "source/subscribeToSource/pending",
  },
  Object {
    "meta": Object {
      "arg": Object {
        "mode": "All",
        "name": "fake-name",
      },
      "requestId": "fake-request-id",
      "requestStatus": "fulfilled",
    },
    "payload": Object {
      "count": 5,
      "icon": undefined,
      "id": 4,
      "link": "fake-link",
      "name": "fake-name",
    },
    "type": "source/subscribeToSource/fulfilled",
  },
]
`;

exports[`subscribeToSource should action list match snapshot when mode is Starred 1`] = `
Array [
  Object {
    "meta": Object {
      "arg": Object {
        "mode": "Starred",
        "name": "fake-name",
      },
      "requestId": "fake-request-id",
      "requestStatus": "pending",
    },
    "payload": undefined,
    "type": "source/subscribeToSource/pending",
  },
  Object {
    "meta": Object {
      "arg": Object {
        "mode": "Starred",
        "name": "fake-name",
      },
      "requestId": "fake-request-id",
      "requestStatus": "fulfilled",
    },
    "payload": Object {
      "count": 0,
      "icon": undefined,
      "id": 4,
      "link": "fake-link",
      "name": "fake-name",
    },
    "type": "source/subscribeToSource/fulfilled",
  },
]
`;

exports[`subscribeToSource should handle subscribeToSource.fulfilled 1`] = `
Object {
  "activeId": 1,
  "list": Array [
    Object {
      "id": 4,
    },
    Object {
      "id": 1,
      "name": "fake-data-1",
    },
  ],
  "subscribeError": undefined,
  "subscribeLink": "",
  "subscribeName": "",
  "subscribeStatus": 2,
  "subscribeStep": undefined,
}
`;

exports[`syncSources should action list match snapshot 1`] = `
Array [
  Object {
    "meta": Object {
      "arg": undefined,
      "requestId": "fake-request-id",
      "requestStatus": "pending",
    },
    "payload": undefined,
    "type": "source/syncSources/pending",
  },
  Object {
    "meta": Object {
      "arg": undefined,
      "requestId": "fake-request-id",
      "requestStatus": "fulfilled",
    },
    "payload": undefined,
    "type": "source/syncSources/fulfilled",
  },
]
`;

exports[`syncSources should handle syncSources.fulfilled 1`] = `
Object {
  "fetchListStatus": 0,
  "syncListStatus": 2,
}
`;

exports[`syncSources should handle syncSources.pending 1`] = `
Object {
  "fetchListStatus": 0,
  "syncListStatus": 1,
}
`;

exports[`syncSources should handle syncSources.rejected 1`] = `
Object {
  "fetchListStatus": 0,
  "syncListStatus": 3,
}
`;

exports[`unsubscribeById should action list match snapshot 1`] = `
Array [
  Object {
    "meta": Object {
      "arg": 1,
      "requestId": "fake-request-id",
      "requestStatus": "pending",
    },
    "payload": undefined,
    "type": "source/unsubscribeById/pending",
  },
  Object {
    "meta": Object {
      "arg": 1,
      "requestId": "fake-request-id",
      "requestStatus": "fulfilled",
    },
    "payload": 1,
    "type": "source/unsubscribeById/fulfilled",
  },
]
`;

exports[`unsubscribeById should handle unsubscribeById.fulfilled 1`] = `
Object {
  "activeId": undefined,
  "list": Array [
    Object {
      "id": 1,
      "name": "data-1",
    },
  ],
}
`;

exports[`updateSourceById should action list match snapshot 1`] = `
Array [
  Object {
    "meta": Object {
      "arg": Object {
        "id": 1,
        "name": "next-name",
      },
      "requestId": "fake-request-id",
      "requestStatus": "pending",
    },
    "payload": undefined,
    "type": "source/updateSourceById/pending",
  },
  Object {
    "meta": Object {
      "arg": Object {
        "id": 1,
        "name": "next-name",
      },
      "requestId": "fake-request-id",
      "requestStatus": "fulfilled",
    },
    "payload": Object {
      "id": 1,
      "name": "next-name",
    },
    "type": "source/updateSourceById/fulfilled",
  },
]
`;

exports[`updateSourceById should handle updateSourceById.fulfilled 1`] = `
Object {
  "activeId": undefined,
  "list": Array [
    Object {
      "id": 1,
      "name": "data-1",
    },
    Object {
      "id": 2,
      "name": "next-data-2",
    },
  ],
}
`;
